--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -5,6 +5,8 @@
   padding: 2rem;
   align-items: center;
   justify-content: center;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 .header {
